- Sped up loading times at startup a little.


================================================================================
Version 1.2.0.0
================================================================================

New Features:
- The use of PhysFS makes it possible to use archived files transparently and
  archives can be added as a new type of pseudo-Resource, which can contain
  multiple resources.
- Updated Node Editor with copy-paste functionality.
- Undo and Redo functionality implemented for the entire editor.
- Hotload for styles implemented for developping new application styles.
- Resource Viewer has an alternate Explorer View and can display Tree and 
  Explorer View next to each other.
- Added support for Font type Resources. Fonts are automatically loaded on loading
  a JOI-Project and can be used in 'font-family' attributes in the PlayerTextBox.
- Alternate Editor Layouts for different screen sizes and preference.
- Every project can have a default font configured, which is used in the Player.
  This font can be a custom Font type Resource.

Changes:
- JOIP-Engine uses PhysFS to allow restricted acces to files only, making it
  impossible to write or read outside of the currently loaded project folder.
- Loading on startup is significantly faster because the logo loads in a
  worker thread.
- Changelog visible in the "About" menu.
- Help has a tree view containing all topics and pages can be searched.
- Code editor allows folding blocks.

Fixed Bugs:
- Default style is fixed. Qml and icons look no longer broken.
- Application sounds don't cut off when a new sound effect starts playing.
- Metronome honors application settings (muted and volume).
- Help UI works on all screens, not just the primary one.
- UI sound effects don't cut off anymore.
- Performance fixes for title in menu and 404 text.
- Resource view is properly resizable now.
- Old version detection turn off even if the user answers 'No' to changing
  the folder.